--- a/src/main.html
+++ b/src/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kneadle v1.2</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="default.css">
 </head>
 <body>
     <div class="app-container">
@@ -697,8 +697,8 @@ Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/12
                         <label for="theme-selector">Theme</label>
                         <div class="select-wrapper cyber-enhanced">
                             <select id="theme-selector" name="theme-selector">
-                                <option value="main.css">Cyberpunk (Default)</option>
-                                <option value="dark.css">Dark Horizon</option>
+                                <option value="default.css">(Default)</option>
+                                <option value="neon.css">Neon</option>
                                 <option value="pipboy.css">Pip-Boy</option>
                             </select>
                         </div>
